--- a/.classpath
+++ b/.classpath
@@ -56,9 +56,25 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/flexmark.jar"/>
-	<classpathentry kind="lib" path="lib/snowball.jar"/>
-	<classpathentry kind="lib" path="lib/whcmin.jar"/>
-	<classpathentry kind="lib" path="lib/xslthl.jar"/>
+	<classpathentry kind="lib" path="lib/flexmark.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/snowball.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/whcmin.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/xslthl.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
