--- a/.project
+++ b/.project
@@ -28,12 +28,12 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
-			<id>1662664600924</id>
+			<id>1670512087124</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
 				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
