--- a/build.xml
+++ b/build.xml
@@ -4,10 +4,8 @@
 	<property name="source" value="17" />
 	<property name="build.compiler" value="javac10+" />
 	<path id="Conversa.classpath">
-		<pathelement location="lib/mapdb.jar" />
-		<pathelement location="lib/openxliff.jar" />
+		<pathelement location="lib/xmljava.jar" />
 		<pathelement location="lib/swt.jar" />
-		<pathelement location="lib/dtd.jar" />
 		<pathelement location="lib/json.jar" />
 		<pathelement location="lib/jsoup.jar" />
 	</path>
