--- a/.classpath
+++ b/.classpath
@@ -6,22 +6,17 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/rmraya/Documents/GitHub/Conversa/lib/swt.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/xmljava.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/rmraya/Documents/GitHub/Conversa/lib/jsoup.jar">
+	<classpathentry kind="lib" path="lib/json.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/json.jar">
+	<classpathentry kind="lib" path="lib/jsoup.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
